--- a/markup/css/main.css
+++ b/markup/css/main.css
@@ -1,3 +1,4 @@
+/* devices viewport width starts at:*/
 /*** Background color for `<body>`.*/
 /*** Global text color on `<body>`.*/
 /*** Global textual link color.*/
@@ -17,7 +18,8 @@
 .clearfix:after {
   content: '';
   display: block;
-  clear: both; }
+  clear: both;
+}
 
 /* line 50, E:/Project Markup/designconepal/markup/scss/base/_helpers.scss */
 .ellipsis {
@@ -25,83 +27,112 @@
   /* 1 */
   text-overflow: ellipsis;
   /* 2 */
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 /* line 1, E:/Project Markup/designconepal/markup/scss/layout/_header.scss */
 #nav {
-  position: relative; }
+  position: relative;
+}
 
 /* line 4, E:/Project Markup/designconepal/markup/scss/layout/_header.scss */
 .navbar-nav {
-  letter-spacing: -4px; }
+  letter-spacing: -4px;
+}
+
+/* line 6, E:/Project Markup/designconepal/markup/scss/layout/_header.scss */
+.navbar-nav li {
+  text-transform: uppercase;
+  margin: 1.3125em 0;
+  letter-spacing: 0;
+  text-align: center;
+  float: none;
+}
+
+@media (min-width: 768px) {
   /* line 6, E:/Project Markup/designconepal/markup/scss/layout/_header.scss */
   .navbar-nav li {
-    text-transform: uppercase;
-    margin: 1.3125em 0;
-    letter-spacing: 0;
-    text-align: center;
-    float: none; }
-    @media (min-width: 768px) {
-      /* line 6, E:/Project Markup/designconepal/markup/scss/layout/_header.scss */
-      .navbar-nav li {
-        display: inline-block;
-        vertical-align: top;
-        text-align: left; } }
-    /* line 16, E:/Project Markup/designconepal/markup/scss/layout/_header.scss */
-    .navbar-nav li a {
-      display: inline-block;
-      vertical-align: top;
-      font-size: 0.75em;
-      line-height: 1.333;
-      font-weight: 600;
-      padding: 0.6667em 0;
-      position: relative;
-      margin: 0 2.083em; }
-      /* line 22, E:/Project Markup/designconepal/markup/scss/layout/_header.scss */
-      .navbar-nav li a:after {
-        background-color: #4b68dd;
-        -webkit-transition: all 0.3s ease;
-        -webkit-transition: all 0.3s ease 0s;
-        transition: all 0.3s ease 0s;
-        position: absolute;
-        content: "";
-        height: 2px;
-        bottom: 0;
-        left: 0;
-        width: 0; }
-      /* line 35, E:/Project Markup/designconepal/markup/scss/layout/_header.scss */
-      .navbar-nav li a:hover:after {
-        width: 100%; }
-  /* line 43, E:/Project Markup/designconepal/markup/scss/layout/_header.scss */
-  .navbar-nav .active a:after {
-    width: 100%; }
-  /* line 48, E:/Project Markup/designconepal/markup/scss/layout/_header.scss */
-  .navbar-nav .active a:hover:after, .navbar-nav .active a:focus:after {
-    width: 100%; }
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+  }
+}
+
+/* line 16, E:/Project Markup/designconepal/markup/scss/layout/_header.scss */
+.navbar-nav li a {
+  display: inline-block;
+  vertical-align: top;
+  font-size: 0.75em;
+  line-height: 1.333;
+  font-weight: 600;
+  padding: 0.6667em 0;
+  position: relative;
+  margin: 0 2.083em;
+}
+
+/* line 22, E:/Project Markup/designconepal/markup/scss/layout/_header.scss */
+.navbar-nav li a:after {
+  background-color: #4b68dd;
+  -webkit-transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  position: absolute;
+  content: "";
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  width: 0;
+}
+
+/* line 35, E:/Project Markup/designconepal/markup/scss/layout/_header.scss */
+.navbar-nav li a:hover:after {
+  width: 100%;
+}
+
+/* line 43, E:/Project Markup/designconepal/markup/scss/layout/_header.scss */
+.navbar-nav .active a:after {
+  width: 100%;
+}
+
+/* line 48, E:/Project Markup/designconepal/markup/scss/layout/_header.scss */
+.navbar-nav .active a:hover:after, .navbar-nav .active a:focus:after {
+  width: 100%;
+}
 
 /* line 55, E:/Project Markup/designconepal/markup/scss/layout/_header.scss */
 .navbar-brand {
   margin: 5px 0;
-  width: 40px; }
-  @media (min-width: 768px) {
-    /* line 55, E:/Project Markup/designconepal/markup/scss/layout/_header.scss */
-    .navbar-brand {
-      margin: 13px 15px 12px;
-      width: 50px; } }
+  width: 40px;
+}
+
+@media (min-width: 768px) {
+  /* line 55, E:/Project Markup/designconepal/markup/scss/layout/_header.scss */
+  .navbar-brand {
+    margin: 13px 15px 12px;
+    width: 50px;
+  }
+}
 
 /* line 63, E:/Project Markup/designconepal/markup/scss/layout/_header.scss */
 .navbar-toggle {
   margin: 1em 0 0 0;
-  padding: 0; }
-  /* line 66, E:/Project Markup/designconepal/markup/scss/layout/_header.scss */
-  .navbar-toggle:hover {
-    opacity: 0.8; }
-  /* line 69, E:/Project Markup/designconepal/markup/scss/layout/_header.scss */
-  .navbar-toggle .icon-bar {
-    width: 1.5625em; }
-    /* line 71, E:/Project Markup/designconepal/markup/scss/layout/_header.scss */
-    .navbar-toggle .icon-bar + .icon-bar {
-      margin-top: 0.375em; }
+  padding: 0;
+}
+
+/* line 66, E:/Project Markup/designconepal/markup/scss/layout/_header.scss */
+.navbar-toggle:hover {
+  opacity: 0.8;
+}
+
+/* line 69, E:/Project Markup/designconepal/markup/scss/layout/_header.scss */
+.navbar-toggle .icon-bar {
+  width: 1.5625em;
+}
+
+/* line 71, E:/Project Markup/designconepal/markup/scss/layout/_header.scss */
+.navbar-toggle .icon-bar + .icon-bar {
+  margin-top: 0.375em;
+}
 
 /* line 76, E:/Project Markup/designconepal/markup/scss/layout/_header.scss */
 #main-nav {
@@ -113,18 +144,284 @@
   width: 100%;
   margin: 0;
   top: 100%;
-  left: 0; }
-  @media (min-width: 768px) {
-    /* line 76, E:/Project Markup/designconepal/markup/scss/layout/_header.scss */
-    #main-nav {
-      position: static;
-      -webkit-box-shadow: none;
-      box-shadow: none;
-      width: auto; } }
+  left: 0;
+}
 
-/* line 10, E:/Project Markup/designconepal/markup/scss/main.scss */
+@media (min-width: 768px) {
+  /* line 76, E:/Project Markup/designconepal/markup/scss/layout/_header.scss */
+  #main-nav {
+    position: static;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    width: auto;
+  }
+}
+
+/* line 19, E:/Project Markup/designconepal/markup/scss/main.scss */
 img {
   max-width: 100%;
-  height: auto; }
+  height: auto;
+}
+
+/* ==========================================================================
+   Hero Banner
+   ========================================================================== */
+/* line 26, E:/Project Markup/designconepal/markup/scss/main.scss */
+.hero-banner {
+  position: relative;
+  overflow: hidden;
+  color: #f7f8fd;
+  padding: 50px 0;
+}
+
+@media (min-width: 768px) {
+  /* line 26, E:/Project Markup/designconepal/markup/scss/main.scss */
+  .hero-banner {
+    padding: 100px 0;
+  }
+}
+
+/* line 35, E:/Project Markup/designconepal/markup/scss/main.scss */
+.bg-stretch {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+}
+
+/* line 42, E:/Project Markup/designconepal/markup/scss/main.scss */
+.bg-stretch img {
+  max-width: none;
+  height: auto;
+  width: 100%;
+}
+
+/* line 49, E:/Project Markup/designconepal/markup/scss/main.scss */
+.top-info h1 {
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #f7f8fd;
+  font-weight: 800;
+  margin: 0 0 46px;
+}
+
+@media (min-width: 480px) {
+  /* line 48, E:/Project Markup/designconepal/markup/scss/main.scss */
+  .top-info {
+    width: 450px;
+  }
+}
+
+@media (min-width: 640px) {
+  /* line 48, E:/Project Markup/designconepal/markup/scss/main.scss */
+  .top-info {
+    width: 600px;
+  }
+  /* line 60, E:/Project Markup/designconepal/markup/scss/main.scss */
+  .top-info h1 {
+    font-size: 48px;
+  }
+}
+
+@media (min-width: 768px) {
+  /* line 48, E:/Project Markup/designconepal/markup/scss/main.scss */
+  .top-info {
+    width: auto;
+  }
+  /* line 66, E:/Project Markup/designconepal/markup/scss/main.scss */
+  .top-info h1 {
+    font-size: 61px;
+    margin-bottom: 73px;
+  }
+}
+
+@media (min-width: 992px) {
+  /* line 48, E:/Project Markup/designconepal/markup/scss/main.scss */
+  .top-info {
+    width: 800px;
+  }
+  /* line 73, E:/Project Markup/designconepal/markup/scss/main.scss */
+  .top-info h1 {
+    font-size: 76px;
+  }
+}
+
+/* line 77, E:/Project Markup/designconepal/markup/scss/main.scss */
+.top-info p {
+  margin-bottom: 36px;
+  font-size: 25px;
+}
+
+@media (min-width: 768px) {
+  /* line 77, E:/Project Markup/designconepal/markup/scss/main.scss */
+  .top-info p {
+    margin-bottom: 61px;
+  }
+}
+
+/* line 84, E:/Project Markup/designconepal/markup/scss/main.scss */
+.top-info .btn {
+  text-transform: uppercase;
+  color: #4b68dd;
+  border-radius: 50px;
+  padding: 11px 28px;
+  letter-spacing: 1px;
+  border-width: 2px;
+  font-weight: 600;
+}
+
+/* line 93, E:/Project Markup/designconepal/markup/scss/main.scss */
+.top-info .btn-primary {
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  background-color: transparent;
+}
+
+/* line 97, E:/Project Markup/designconepal/markup/scss/main.scss */
+.top-info .btn-primary:hover {
+  background-color: #4b68dd;
+  border-color: #4b68dd;
+  color: #f7f8fd;
+}
+
+/* ==========================================================================
+   Clients logo list
+   ========================================================================== */
+/* line 107, E:/Project Markup/designconepal/markup/scss/main.scss */
+.logo-panel {
+  background-color: #fff;
+  padding: 0.8125em 0;
+}
+
+/* line 110, E:/Project Markup/designconepal/markup/scss/main.scss */
+.logo-panel .title {
+  font-size: 0.875em;
+  line-height: 1.4285;
+  font-weight: normal;
+  display: inline-block;
+  vertical-align: top;
+  margin-bottom: 5px;
+  color: #949494;
+}
+
+/* line 118, E:/Project Markup/designconepal/markup/scss/main.scss */
+.logo-wrap {
+  letter-spacing: -5px;
+  margin: 0;
+}
+
+/* line 121, E:/Project Markup/designconepal/markup/scss/main.scss */
+.logo-wrap li {
+  vertical-align: middle;
+  display: inline-block;
+  margin: 0 0 0.8125em;
+  padding: 0 0.8125em;
+  letter-spacing: 0;
+}
+
+/* line 127, E:/Project Markup/designconepal/markup/scss/main.scss */
+.logo-wrap li a {
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  display: block;
+}
+
+/* line 131, E:/Project Markup/designconepal/markup/scss/main.scss */
+.logo-wrap li a:hover {
+  opacity: 0.8;
+}
+
+/* ==========================================================================
+   Intro Section
+   ========================================================================== */
+/* line 140, E:/Project Markup/designconepal/markup/scss/main.scss */
+.section-heading {
+  margin: 0 0 3.125em;
+}
+
+/* line 142, E:/Project Markup/designconepal/markup/scss/main.scss */
+.section-heading h2 {
+  margin: 0 0 1.1818em;
+}
+
+/* line 146, E:/Project Markup/designconepal/markup/scss/main.scss */
+.intro-section {
+  padding: 6.25em 0;
+}
+
+@media (min-width: 768px) {
+  /* line 149, E:/Project Markup/designconepal/markup/scss/main.scss */
+  .intro-list {
+    letter-spacing: -5px;
+    margin: 0 -1.5625em;
+  }
+}
+
+@media (min-width: 768px) {
+  /* line 154, E:/Project Markup/designconepal/markup/scss/main.scss */
+  .intro-list .intro {
+    display: inline-block;
+    vertical-align: top;
+    letter-spacing: 0;
+    width: 50%;
+  }
+}
+
+/* line 163, E:/Project Markup/designconepal/markup/scss/main.scss */
+.intro {
+  margin: 0 0 1.5625em;
+}
+
+@media (min-width: 768px) {
+  /* line 163, E:/Project Markup/designconepal/markup/scss/main.scss */
+  .intro {
+    padding: 0 1.5625em;
+  }
+}
+
+/* line 168, E:/Project Markup/designconepal/markup/scss/main.scss */
+.intro .intro-icon {
+  text-align: center;
+}
+
+@media (min-width: 481px) {
+  /* line 168, E:/Project Markup/designconepal/markup/scss/main.scss */
+  .intro .intro-icon {
+    float: left;
+  }
+}
+
+/* line 174, E:/Project Markup/designconepal/markup/scss/main.scss */
+.intro .glyphicon {
+  color: #c4c03e;
+  line-height: 1.2;
+  font-size: 61px;
+}
+
+/* line 179, E:/Project Markup/designconepal/markup/scss/main.scss */
+.intro .intro-text {
+  overflow: hidden;
+}
+
+@media (min-width: 481px) {
+  /* line 179, E:/Project Markup/designconepal/markup/scss/main.scss */
+  .intro .intro-text {
+    padding-left: 1.5625em;
+  }
+}
+
+/* line 184, E:/Project Markup/designconepal/markup/scss/main.scss */
+.intro .intro-text h3 {
+  text-align: center;
+  margin: 0 0 0.88em;
+}
+
+@media (min-width: 481px) {
+  /* line 184, E:/Project Markup/designconepal/markup/scss/main.scss */
+  .intro .intro-text h3 {
+    text-align: left;
+  }
+}
 
 /*# sourceMappingURL=../css/main.map */
