--- a/markup/scss/_bootstrap-custom.scss
+++ b/markup/scss/_bootstrap-custom.scss
@@ -1,7 +1,7 @@
 /*** Background color for `<body>`.*/
 $body-bg:               #f7f8fd;
 /*** Global text color on `<body>`.*/
-$text-color:            #030611;
+$text-color:            #949494;
 $brand-primary:         #4b68dd;
 $brand-success:         #5970cf;
 $brand-info:            #f4ef4c;
@@ -21,10 +21,10 @@ $font-family-sans-serif:  "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-
 $font-family-serif: Lora, 'Times New Roman', Times, serif;
 $font-size-base:          16px;
 $font-size-h1:			  39px;
-$font-size-h2:            33px;
-$font-size-h3:            31px;
-$font-size-h4:			  25px;
-$font-size-h5:			  20px;
+$font-size-h2:            31px;
+$font-size-h3:            25px;
+$font-size-h4:			  20px;
+$font-size-h5:			  16px;
 $font-size-h6:			  $font-size-base;
 
 /*** Unit-less `line-height` for use in components like buttons.*/
@@ -33,6 +33,7 @@ $line-height-base:        1.5625; /* 25/16*/
 /*** By default, this inherits from the `<body>`.*/
 $headings-font-family:	  $font-family-serif;
 $headings-font-weight:    700;
+$headings-color:			  #030611;
 
 $btn-default-color:              #333;
 $btn-default-bg:                 #fff;
