--- a/markup/scss/main.scss
+++ b/markup/scss/main.scss
@@ -1,3 +1,12 @@
+/* devices viewport width starts at:*/
+$breakpoints: (
+  xs-phone: 320px,
+  phone: 480px,
+  s-phone: 639px,
+  tablet: 767px,
+  desktop: 991px,
+  widescreen: 1300px
+  );
 @import "bootstrap-custom";
 
 @import 'vendors/include-media';
@@ -10,4 +19,174 @@
 img{
 	max-width: 100%;
 	height: auto;
+}
+/* ==========================================================================
+   Hero Banner
+   ========================================================================== */
+.hero-banner{
+	position: relative;
+	overflow: hidden;
+	color: $white;
+	padding: 50px 0;
+	@include media(">tablet"){
+		padding: 100px 0;
+	}
+}
+.bg-stretch{
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	z-index: -1;
+	img{
+		max-width: none;
+		height: auto;
+		width: 100%;
+	}
+}
+.top-info{
+	h1{
+		font-family: $font-family-sans-serif;
+		color: $white;
+		font-weight: 800;
+		margin: 0 0 46px;
+	}
+	@include media(">=phone"){
+		width: 450px;
+	}
+	@include media(">s-phone"){
+		width: 600px;
+		h1{
+			font-size: 48px;
+		}
+	}
+	@include media(">tablet"){
+		width: auto;
+		h1{
+			font-size: 61px;
+			margin-bottom: 73px;
+		}
+	}
+	@include media(">desktop"){
+		width: 800px;
+		h1{
+			font-size: 76px;
+		}
+	}
+	p{
+		margin-bottom: 36px;
+		font-size: 25px;
+		@include media(">tablet"){
+			margin-bottom: 61px;
+		}
+	}
+	.btn{
+		text-transform: uppercase;
+		color: $brand-primary;
+		border-radius: 50px;
+		padding: 11px 28px;
+		letter-spacing: 1px;
+		border-width: 2px;
+		font-weight: 600;
+	}
+	.btn-primary{
+		-webkit-transition: all 0.3s ease 0s;
+		transition: all 0.3s ease 0s;
+		background-color: transparent;
+		&:hover{
+			background-color: $brand-primary;
+			border-color: $brand-primary;
+			color: $white;
+		}
+	}
+}
+/* ==========================================================================
+   Clients logo list
+   ========================================================================== */
+.logo-panel{
+	background-color: #fff; 
+	padding: 0.8125em 0;
+	.title{
+		@include font(0.875em, 1.4285);
+		display: inline-block;
+		vertical-align: top;
+		margin-bottom: 5px;
+		color: #949494;
+	}
+}
+.logo-wrap{
+	letter-spacing: -5px;
+	margin: 0;
+	li{
+		vertical-align: middle;
+		display: inline-block;
+		margin: 0 0 0.8125em;
+		padding: 0 0.8125em;
+		letter-spacing: 0;
+		a{
+			-webkit-transition: all 0.3s ease 0s;
+			transition: all 0.3s ease 0s;
+			display: block;
+			&:hover{
+				opacity: 0.8;
+			}
+		}
+	}
+}
+/* ==========================================================================
+   Intro Section
+   ========================================================================== */
+.section-heading{
+	margin: 0 0 3.125em;
+	h2{
+		margin: 0 0 1.1818em;
+	}
+}
+.intro-section{
+	padding: 6.25em 0;
+}
+.intro-list{
+	@include media(">tablet"){
+		letter-spacing: -5px;
+		margin: 0 -1.5625em;
+	}
+	.intro{
+		@include media(">tablet"){
+			display: inline-block;
+			vertical-align: top;
+			letter-spacing: 0;
+			width: 50%;
+		}
+	}
+}
+.intro{
+	margin: 0 0 1.5625em;
+	@include media(">tablet"){
+		padding: 0 1.5625em;
+	}
+	.intro-icon{
+		text-align: center;
+		@include media(">phone"){
+			float: left;
+		}
+	}
+	.glyphicon{
+		color: desaturate(#f0ea12, 35%);
+		line-height: 1.2;
+		font-size: 61px;
+	}
+	.intro-text{
+		overflow: hidden;
+		@include media(">phone"){
+			padding-left: 1.5625em;
+		}
+		h3{
+			text-align: center;
+			margin: 0 0 0.88em;
+			@include media(">phone"){
+				text-align: left;
+			}
+		}
+	}
 }
