--- a/markup/scss/_bootstrap-custom.scss
+++ b/markup/scss/_bootstrap-custom.scss
@@ -4,7 +4,7 @@ $body-bg:               #f7f8fd;
 $text-color:            #949494;
 $brand-primary:         #4b68dd;
 $brand-success:         #5970cf;
-$brand-info:            #f4ef4c;
+$brand-info:            #f0ea12;
 $brand-warning:         #ded924;
 $brand-danger:          #e14111;
 $white: #f7f8fd;
