--- a/markup/scss/_bootstrap-custom.scss
+++ b/markup/scss/_bootstrap-custom.scss
@@ -1,7 +1,7 @@
 /*** Background color for `<body>`.*/
 $body-bg:               #f7f8fd;
 /*** Global text color on `<body>`.*/
-$text-color:            #949494;
+$text-color:            #030611;
 $brand-primary:         #4b68dd;
 $brand-success:         #5970cf;
 $brand-info:            #f0ea12;
@@ -31,7 +31,7 @@ $font-size-h6:			  $font-size-base;
 $line-height-base:        1.5625; /* 25/16*/
 
 /*** By default, this inherits from the `<body>`.*/
-$headings-font-family:	  $font-family-serif;
+$headings-font-family:	  $font-family-sans-serif;
 $headings-font-weight:    700;
 $headings-color:			  #030611;
 
