Values block added in about.html

--- a/markup/css/main.css
+++ b/markup/css/main.css
@@ -495,7 +495,113 @@
 }
 
 .values-block {
+  margin-bottom: 1.5625em;
   padding: 6.25em 0 0;
+}
+
+.values-block .carousel-inner {
+  padding-bottom: 3.125em;
+  margin: 0 auto;
+  width: 568px;
+}
+
+.values-block .carousel-control.left, .values-block .carousel-control.right {
+  background-image: none;
+}
+
+.values-block .carousel-indicators {
+  top: 100%;
+}
+
+.values-block .carousel-indicators li {
+  font-size: 0.8125em;
+  line-height: 1.769;
+  font-weight: normal;
+  border: 1px solid transparent;
+  vertical-align: top;
+  border-radius: 50%;
+  text-indent: 0;
+  height: 25px;
+  width: 25px;
+}
+
+.values-block .carousel-indicators .active {
+  border-color: #f38665;
+  background-color: transparent;
+}
+
+.values-block .carousel-control .icon {
+  font-size: 4.65em;
+  line-height: 1;
+  font-weight: 400;
+}
+
+.value-list {
+  table-layout: fixed;
+  display: table;
+  width: 100%;
+}
+
+.value-list .value-count,
+.value-list .value-content {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.value-list .value-count {
+  font-size: 4.75em;
+  line-height: 1;
+  font-weight: 700;
+  color: #4b68dd;
+  position: relative;
+  width: 20%;
+}
+
+.value-list .value-count:after {
+  background-color: #f38665;
+  position: absolute;
+  content: "";
+  width: 2px;
+  height: 90%;
+  right: 19px;
+  top: 6px;
+}
+
+.value-list .value-content {
+  width: 80%;
+}
+
+.value-list .value-content h3 {
+  font-size: 1.9375em;
+  line-height: 1;
+  font-weight: 400;
+  font-family: Lora, "Times New Roman", Times, serif;
+  color: #4b68dd;
+  font-style: italic;
+  margin: 0;
+}
+
+.value-list .value-content p {
+  font-size: 0.8125em;
+  line-height: 1.538;
+  font-weight: normal;
+  margin-bottom: 0;
+}
+
+.clients-list {
+  padding: 6.25em 0 0;
+}
+
+.clients-list .clients-logo {
+  letter-spacing: -5px;
+  text-align: center;
+}
+
+.clients-list .clients-logo li {
+  display: inline-block;
+  vertical-align: top;
+  letter-spacing: 0;
+  width: 20%;
 }
 
 img {
