--- a/markup/scss/pages/_about.scss
+++ b/markup/scss/pages/_about.scss
@@ -68,5 +68,88 @@
 	}
 }
 .values-block{
+	margin-bottom: 1.5625em;
 	padding: 6.25em 0 0;
+	.carousel-inner{
+		padding-bottom: 3.125em;
+		margin: 0 auto;
+		width: 568px;
+	}
+	.carousel-control{
+		&.left,
+		&.right{
+			background-image: none;
+		}
+	}
+	.carousel-indicators{
+		top: 100%;
+		li{
+			@include font(0.8125em,1.769);
+			border: 1px solid transparent;
+			vertical-align: top;
+			border-radius: 50%;
+			text-indent: 0;
+			height: 25px;
+			width: 25px;
+		}
+		.active{
+			border-color: lighten($brand-danger, 20%);
+			background-color: transparent;
+		}
+	}
+	.carousel-control{
+		.icon{
+			@include font(4.65em,1,400);
+		}
+	}
+}
+.value-list{
+	table-layout: fixed;
+	display: table;
+	width: 100%;
+	.value-count,
+	.value-content{
+		@include display(table-cell, middle);
+	}
+	.value-count{
+		@include font(4.75em,1,700);
+		color: $brand-primary;
+		position: relative;
+		width: 20%;
+		&:after{
+			background-color: lighten($brand-danger, 20%);
+			position: absolute;
+			content: "";
+			width: 2px;
+			height: 90%;
+			right: 19px;
+			top: 6px;
+		}
+	}
+	.value-content{
+		width: 80%;
+		h3{
+			@include font(1.9375em,1, 400);
+			font-family: $font-family-serif;
+			color: $brand-primary;
+			font-style: italic;
+			margin: 0;
+		}
+		p{
+			@include font(0.8125em,1.538);
+			margin-bottom: 0;
+		}
+	}
+}
+.clients-list{
+	padding: 6.25em 0 0;
+	.clients-logo{
+		letter-spacing: -5px;
+		text-align: center;
+		li{
+			@include display(inline-block, top);
+			letter-spacing: 0;
+			width: 20%;
+		}
+	}
 }
